[project]
name = "coin-conversion-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
